--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
